<resources>
    <string name="app_name">Test2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="todo">TODO</string>
    <string name="bold_font" />
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="i_agree_with_our_terms_and_conditions">I agree with our Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
</resources>